tests/baselines/reference/unusedPrivateVariableInClass1.errors.txt
unusedPrivateVariableInClass1.ts(2,13): error TS6133: 'x' is declared but its value is never read.


==== unusedPrivateVariableInClass1.ts (1 errors) ====
    class greeter {
        private x: string;
                ~
!!! error TS6133: 'x' is declared but its value is never read.
    }